# glamour

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  build.rs  index.html  package.json  perf_index.json  test-spec.json
.github/workflows/: rust.yml
assets/css/: 0.styles.41d3af21.css
assets/js/: 10.76065322.js  11.c1b27c41.js  12.396ca0c9.js  13.ee725a9f.js  14.045419f4.js  15.f2f32cd8.js  16.fa11dd81.js  17.ad528ca9.js  18.78a7f4be.js  19.9e692e02.js  2.6113cb1a.js  20.c75e3461.js  21.a71afef4.js  22.772549bc.js  23.cf1d56d8.js  24.cff4f68a.js  25.5b35fc90.js  3.0ef83f08.js  4.0d95476f.js  5.49187a79.js  6.87f1c5ea.js  7.497e94d1.js  8.a5e4d470.js  9.5dfcc772.js  app.bddbe6f8.js
benches/: benchmark.rs
data/: scatter-data.xlsx
data/run00/: 1590301583404.csv  1590301583404.json  1590301843342.csv  1590301843342.json  1590302106730.csv  1590302106730.json  1590302372806.csv  1590302372806.json  1590302649773.csv  1590302649773.json  info.txt  scatter-test.xlsx
data/run01/: 1590550666430.csv  1590550666430.json  1590550925050.csv  1590550925050.json  1590551185311.csv  1590551185311.json  1590551449195.csv  1590551449195.json  1590551908106.csv  1590551908106.json  info.txt
data/run02/: 1590561603174.csv  1590561603174.json  1590563106979.csv  1590563106979.json  1590564318186.csv  1590564318186.json  1590565362721.csv  1590565362721.json  1590566401340.csv  1590566401340.json  info.txt
dev/: 2020-04-16-finding-problems.html  2020-04-20-the-crit-path-to-deferred-shading.html  2020-04-23-basic-lighting.html  index.html
doc/: search-index.js  settings.html  source-files.js
doc/glamour/: all.html  enum.VertAttrType.html  fn.assets_path.html  index.html  macro.gl_call!.html  macro.gl_call.html  sidebar-items.js  struct.App.html  struct.AppContext.html  struct.Camera.html  struct.GBuf.html  struct.IndexBuf.html  struct.Renderer.html  struct.ShaderBuilder.html  struct.ShaderProgram.html  struct.Texture.html  struct.Transform.html  struct.VertArray.html  struct.VertAttr.html  struct.VertBasic.html  trait.Layer.html  (+5 more)
docs/: .gitignore  ICT40010.bib  README.md  glamour.md
tech/: architecture.html  assets.html  data-collection.html  foundation.html  future-work.html  index.html  main-loop.html  proposal-changes.html  renderer.html  technology.html  tests-docs.html
(+222 files in other folders)
