[package]
name = "glamour"
version = "0.6.0"
authors = ["David J Holland <stooge213@hotmail.com>"]
edition = "2018"
default-run = "sandbox"
build = "build.rs"

[dependencies]
anyhow = "1.0.28"
gl = "0.14.0"
glutin = "0.23.0"
imgui = "0.3.0"
imgui-opengl-renderer = "0.7.0"
imgui-winit-support = "0.3.1"
memoffset = "0.5.4"
nalgebra-glm = "0.7.0"
serde = "1.0.106"
serde_json = "1.0.51"
image = "0.23.4"

[build-dependencies]
copy_dir = "0.1.2"

[lib]
name = "glamour"
path = "src/glamour/lib.rs"

[[bin]]
name = "sandbox"
path = "src/sandbox/bin.rs"
