[package]
name = "glamour"
version = "0.7.1"
authors = ["David J Holland <stooge213@hotmail.com>"]
edition = "2018"
default-run = "sandbox"
build = "build.rs"

[dependencies]
gl = "0.14.0"
glutin = "0.23.0"
imgui = "0.3.0"
imgui-opengl-renderer = "0.7.0"
imgui-winit-support = "0.3.1"
nalgebra-glm = "0.7.0"
serde = "1.0.106"
serde_json = "1.0.52"
image = "0.23.4"
rand = "0.7.3"
rand_chacha = "0.2.2"
rayon = "1.3.0"
bracket-noise = "0.8.0"

[build-dependencies]
copy_dir = "0.1.2"

[lib]
name = "glamour"
path = "src/glamour/lib.rs"

[[bin]]
name = "sandbox"
path = "src/sandbox/bin.rs"
