[package]
name = "glamour"
version = "0.10.2"
authors = ["David J Holland <stooge213@hotmail.com>"]
edition = "2018"
default-run = "sandbox"
build = "build.rs"

[dependencies]
gl = "^0.14.0"
glutin = "^0.24.0"
imgui = "^0.4.0"
imgui-opengl-renderer = "^0.8.0"
imgui-winit-support = "^0.4.0"
nalgebra-glm = "^0.7.0"
serde = { version = "^1.0.106", features = ["derive"] }
serde_json = "^1.0.52"
csv = "^1.1.3"
image = "^0.23.4"
rand = "^0.7.3"
rand_chacha = "^0.2.2"
rayon = "^1.3.0"
bracket-noise = "^0.8.0"
lazy_static = "^1.4.0"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "benchmark"
harness = false

[build-dependencies]
copy_dir = "0.1.2"

[lib]
name = "glamour"
path = "src/glamour/lib.rs"

[[bin]]
name = "sandbox"
path = "src/sandbox/bin.rs"

[[bin]]
name = "dossier"
path = "src/dossier/bin.rs"
# cargo run --release --bin dossier -- 0 && cargo run --release --bin dossier -- 1 && cargo run --release --bin dossier -- 2 && cargo run --release --bin dossier -- 3 && cargo run --release --bin dossier -- 4
